@@ -81,6 +81,7 @@ https://github.com/elastic/beats/compare/v6.4.0...6.x[Check the HEAD diff]
 - Fix issue that would prevent kafka module to find a proper broker when port is not set {pull}8613[8613]
 - Fix range colors in multiple visualizations. {issue}8633[8633] {pull}8634[8634]
 - Fix incorrect header parsing on http metricbeat module {issue}8564[8564] {pull}8585[8585]
+- Fixed a panic when the kvm module cannot establish a connection to libvirtd. {issue}7792[7792].
 
 *Packetbeat*
 
